# Johnson-Bot-NeoRS

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  Procfile  app.json  build.rs  build.sh  cliff.toml  deploy.sh  docker-compose.yml  j_nrs.service
.github/workflows/: docker-publish.yml
.sqlx/: query-06b133cb13b9b6f820b2cc11eee759a3937e7bdf9d515c53b85c634a68ea0a1c.json  query-0c80b54f12fe35d2c066a647bb2c8e4036b193896eaaaf73de9b3acf112c79ea.json  query-175a35cb53f87c8c3ef4432b8d9aebc1345b6f511aec977f910fcd817b9ec642.json  query-1c6b39d4be4d655a7e8285018517a18ca017469269aa96cc52a9ae95a49a551d.json  query-728cda41b2aea204f6591e1521b0074eef093f47a0ba2ba4d69b4453490aa40f.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-d49614c155527be4e5ef5ea0ead53c73cc87422f3e5a30502dffeb34507d1222.json
cfg/: kwr.json
migrations/: 001_jb.sql  002_jb.sql  003_jb.sql
src/: commands.rs  custom_types.rs  db.rs  events.rs  logging.rs  main.rs  mongo.rs  spotify.rs  utils.rs
src/checks/: mod.rs  slurs.rs
src/commands/: basic.rs  config.rs  gamble.rs  mod.rs  music.rs  relations.rs  roles.rs  stats.rs
src/utils/: math.rs  message.rs  mod.rs  string.rs
