[package]
name = "johnson-nrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.0", features = ["json"] }
tracing-appender = "0.2"
mongodb = "2.8.0"
serde = "1.0.195"
serde_json = "1.0"
futures = "0.3"
rand = "0.8.5"
regex = "1.10.3"

[dependencies.songbird]
version = "0.4.0"
features = ["builtin-queue"]

[dependencies.symphonia]
version = "0.5.2"
features = ["mp3", "wav"]
