[package]
name = "johnson-nrs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.0", features = ["json"] }
tracing-appender = "0.2"
mongodb = "2.8.0"
serde = "1.0.195"
serde_json = "1.0"
futures = "0.3"
futures-util = "0.3"
rand = "0.8.5"
regex = "1.10.3"
reqwest = "0.11"
url = "2.5.0"
uuid = "1.8.0"
once_cell = "1.19.0"
# rspotify = {version = "0.13.1", features = ["env-file"]}

# [dependencies.songbird]
# version = "0.4.0"
# features = ["builtin-queue"]
#
# [dependencies.symphonia]
# version = "0.5.2"
# features = ["mp3", "wav"]
